<resources>
    <string name="app_name">MindMaze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_mindmaze">Welcome to MindMaze</string>
    <string name="already_registered_sign_in">Already Registered ? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email .......</string>
    <string name="c_programming">C Programming</string>
</resources>